--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ li {
 
 #header {
   background: linear-gradient(90deg, #245182 16.94%, #253959 79.95%);
-  height: 36px;
+  height: 48px;
   display: flex;
   align-items: center;
 }
@@ -23,11 +23,16 @@ li {
 body, html {
   margin: 0;
   padding: 0;
-  font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .logo {
-  height: 30px;
+  height: 28px;
+  margin-left: 78px;
+}
+
+.logo-footer {
+  height: 22px;
   margin-left: 78px;
 }
 
@@ -36,21 +41,35 @@ body, html {
   right: 96px;
 }
 
+.menu-items-footer {
+  position: absolute;
+  right: 96px;
+}
+
+.menu-items-footer a {
+  color: rgb(148, 148, 148);
+}
+
 .title {
-  color: antiquewhite;
+  color: white;
   font-size: 18px;
   margin-left: 12px;
 }
 
-#footer {
-  background: linear-gradient(184.01deg, #245182 15.97%, #253959 109.62%);
-  color: white;
-  text-align: center;
-  padding: 20px 0 80px 0;
+.title-footer {
+  color: rgb(148, 148, 148);
+  font-size: 16px;
+  margin-left: 12px;
 }
 
-.footer-as {
-  color: white;
+.footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0px;
+  background: rgb(223, 223, 223);
+  height: 32px;
+  display: flex;
+  align-items: center;
 }
 
 .bg {
